--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "~2.0.0",
     "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-jshint": "^2.0.0",
+    "grunt-contrib-uglify": "~3.1.0",
     "grunt-text-replace": "^0.4.0",
     "grunt-wp-deploy": "~1.3.0",
     "grunt-wp-i18n": "~1.0.1",
@@ -26,5 +28,8 @@
     "load-grunt-tasks": "~4.0.0",
     "parcel-bundler": "^1.10.1",
     "sass": "^1.15.1"
+  },
+  "dependencies": {
+    "jshint-stylish": "^2.2.1"
   }
 }
